fixed cart item alignment on cash register page

--- a/src/client/features/CashRegister/CartCard.scss
+++ b/src/client/features/CashRegister/CartCard.scss
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 15em;
     border-radius: 20px;
     margin: 3px;
